1.18 progress